All the unit tests now pass, tested in Safari.

--- a/tests/unit/event/index.html
+++ b/tests/unit/event/index.html
@@ -12,6 +12,7 @@
 		$.testHelper.setPushState();
 	</script>
 
+	<script src="../../../js/jquery.mobile.define.js"></script>
 	<script src="../../../js/jquery.mobile.event.js"></script>
 	<script src="../../../js/"></script>
 
